<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        style="@style/black_text_title"
        android:id="@+id/btnStoreInformation"
        android:layout_marginTop="10dp"
        android:text="@string/storeInformation"/>

    <Button
        style="@style/black_text_title"
        android:layout_below="@+id/btnStoreInformation"
        android:id="@+id/btnShowInformation"
        android:layout_marginTop="10dp"
        android:text="@string/showInformation"/>

    <TextView
        style="@style/black_text_title"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnShowInformation"
        android:id="@+id/tvPrefs"
        android:padding="10dp"
        android:text="@string/data"/>

</RelativeLayout>